Fix z-index on anchor links

--- a/website/src/scss/includes/base.scss
+++ b/website/src/scss/includes/base.scss
@@ -51,6 +51,7 @@ h1, h2, h3, h4, h5, h6 {
         position: absolute;
         width: 100%;
         height: 100%;
+        z-index: 2;
     }
 }
 h1 {
